# hierx

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HIERARCHIES_CONCEPTUAL_DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: small_network.py  toy_example.py
hierx/: __init__.py  backends.py  hierarchy.py  interaction.py  storage.py  utils.py
tests/: conftest.py  generate_reference.py  reference_grid_20x20.json  reference_grid_50x50.json  test_accuracy_extended.py  test_backends.py  test_contracts.py  test_paper_claims.py  test_prerelease.py  test_reference_regression.py  test_scipy_parity.py  test_storage.py  test_zones_subset.py
